module/core/derive_tools/tests/inc/index_mut/compiletime/enum.stderr
error: IndexMut can be applied only to a structure
 --> tests/inc/index_mut/compiletime/enum.rs:4:1
  |
4 | / enum Enum< T >
5 | | {
6 | |   Nothing,
7 | |   #[ index ]
8 | |   IndexVector( Vec< T > )
9 | | }
  | |_^

error: cannot find attribute `index` in this scope
 --> tests/inc/index_mut/compiletime/enum.rs:7:6
  |
7 |   #[ index ]
  |      ^^^^^
